k8s/01-japan-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: japan-webui
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: japan-webui
  template:
    metadata:
      labels:
        app: japan-webui
    spec:
      containers:
        - name: japan-webui
          image: uhub.service.ucloud.cn/entropypool/japan-webui:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: japan-webui
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: japan-webui
