k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: japan-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: japan-webui
    k8s.kuboard.cn/workload: japan-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd

spec:
  tls:
      - hosts:
          - www.procyon.vip
          - procyon.vip
        secretName: procyon-vip-tls
      - hosts:
          - www.npool.top
          - npool.top
        secretName: npool-top-tls
  rules:
    - host: www.procyon.vip
      http:
        paths:
          - path: /
            backend:
              serviceName: japan-webui
              servicePort: 80
    - host: www.npool.top
      http:
        paths:
          - path: /
            backend:
              serviceName: japan-webui
              servicePort: 80
    - host: procyon.vip
      http:
        paths:
          - path: /
            backend:
              serviceName: japan-webui
              servicePort: 80
